# Kubernetes-based-Distributed-Queueing-System-

./: README.md
distributed-os-lab1/: CMakeLists.txt  Dockerfile.distributor  Dockerfile.queue  Dockerfile.stateful-server  Dockerfile.stateless-server  README.md  docker-compose.yml  grafana-dashboard.json  kind-config.yaml  queue-servicemonitor.yaml  requirements.txt  setup.sh  start-queues.py  workload.yaml  workload_generator.py
distributed-os-lab1/distributor-stack/: Chart.yaml  values.yaml
distributed-os-lab1/distributor-stack/templates/: _helpers.tpl  deployment.yaml  service.yaml
distributed-os-lab1/examples/: 02_producer_and_consumer_instrumented.py  03_stateful_server_func_ex.py  03_stateless_server_func_ex.py  04_orchestrated_ex.sh  05_orchestrated_ex.sh  06_orchestrated_ex.sh  data0.txt  data1.txt  data2.txt  data3.txt  data_large.txt
distributed-os-lab1/proto/: queue.proto
distributed-os-lab1/queue-stack/: Chart.yaml  values.yaml
distributed-os-lab1/queue-stack/templates/: _helpers.tpl  queue-deployment.yaml  queue-service.yaml  server-deployment.yaml  server-service.yaml
distributed-os-lab1/src/: distributor.cc  queue.cc  stateful-server.cc  stateless-server.cc
distributed-os-lab1/tools/: derive-event-metrics.py  derive-sys-metrics.py  plot-event-metrics.py  plot-sys-metrics.py  plot_job_trace.py
